# SCI-Solver_Peridynamic

./: .gitignore  README.md
BunnyBreak/: BunnyBreak.pro  Makefile  cyPoint.h  del  gogo  gogo_pd  main.cpp  params.txt  scene.cpp  scene.h  short
BunnyBreak/mesh_query0.1/: Makefile  bounding_box_tree.cpp  bounding_box_tree.h  mesh_query.h
PeriCUDAEngine/: Makefile  Makefile.profile  PeriCUDAEngine.pro  cg_solver.cuh  cutil_math_ext.h  cyTriMesh.h  definitions.h  kdtree.h  memory_manager.cpp  memory_manager.h  monitor.cpp  newmark_beta.cuh  parameters.cpp  parameters.h  simulator.h  up
PeriCUDAEngine/cusplibrary-0.4.0/examples/Preconditioners/: B.mtx  diagonal.cu
PeriCUDAViz/: colorselector.cpp  controller.cpp  controller.h  datareader.h  dualviewport_renderer.h  main.cpp  mainwindow.cpp  parameters.cpp  parameters.h  renderer.cpp  renderer.h  textures.qrc  unitcube.cpp  unitcube.h  unitplane.cpp
PeriCUDAViz/shaders/: background.fs.glsl  background.vs.glsl  box.fs.glsl  box.vs.glsl  depth-map.fs.glsl  ground.fs.glsl  ground.vs.glsl  point-sphere-view.fs.glsl  surface-view.fs.glsl
src/: CMakeLists.txt
src/Resources/icons/: PeriViz.rc  resource.h
src/Resources/shaders/: depth-map.vs.glsl  light.fs.glsl  light.vs.glsl  point-sphere-view.vs.glsl  surface-view.vs.glsl
src/core/: CMakeLists.txt  Makefile  cg_solver.cuh  cutil_math_ext.h  cyTriMesh.h  dataIO.cu  dataIO.h  definitions.h  helper_cuda.h  helper_math.h  implicit_euler.cuh  memory_manager.cpp  memory_manager.cu  memory_manager.h  monitor.cpp  monitor.h  newmark_beta.cuh  simulator.cpp  simulator.cu  simulator.cuh  simulator.h  utilities.h
src/core/cusplibrary-0.4.0/examples/Views/: cg_raw.cu
src/examples/: CMakeLists.txt  main.cpp  params.txt  scene.cpp  scene.h  up  up1
src/examples/mesh_query0.1/: README  bounding_box.h  mesh_query.cpp  util.h
src/gui/: CMakeLists.txt  PeriCUDAViz.pro  colorselector.h  controller.cpp  datareader.cpp  datareader.h  dualviewport_renderer.cpp  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  parameters.cpp  renderer.cpp  renderer.h  shaders.qrc  unitplane.h
